[package]
name = "mqtt-image-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
image = "0.24"
log = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
rumqttc = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
toml = "0.7.6"

